--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=8080
 MONGODB_URL=mongodb://localhost:27017/treat-gateway
-DISCOVERY_SERVICE_URL=http://localhost:3030
+DISCOVERY_SERVICE_URL=http://35.182.121.64:3030
