--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node ./src --extensions='.ts'",
+    "start": "ts-node ./src",
     "production": "node ./lib",
     "build": "babel src --out-dir lib --extensions='.ts'",
     "test": "npm run build && mocha"
@@ -12,21 +12,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-typescript": "^7.3.3",
     "@types/axios": "^0.14.0",
     "@types/boom": "^7.2.1",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.1",
     "@types/node": "^12.0.0",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
     "@hapi/boom": "^7.4.2",
     "apollo-server-express": "^2.5.0",
     "axios": "^0.18.0",
@@ -35,6 +30,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "graphql": "^14.3.0",
-    "mongoose": "^5.5.7"
+    "inversify": "^5.0.1",
+    "mongoose": "^5.5.7",
+    "reflect-metadata": "^0.1.13"
   }
 }
