feat: Fix TS compiler

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
+    "outDir": "lib/",
+    "rootDir": "src/",
+    "esModuleInterop": true
   }
 }
