--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "ts-node ./src",
     "production": "node ./lib",
-    "build": "babel src --out-dir lib --extensions='.ts'",
+    "build": "tsc",
     "test": "npm run build && mocha"
   },
   "author": "",
@@ -15,7 +15,8 @@
     "@types/axios": "^0.14.0",
     "@types/boom": "^7.2.1",
     "@types/dotenv": "^6.1.1",
-    "@types/express": "^4.16.1",
+    "@types/express": "^4.17.0",
+    "@types/graphql": "^14.2.2",
     "@types/node": "^12.0.0",
     "mocha": "^6.1.4",
     "ts-node": "^8.3.0",
